--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
