--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-date-pickers": "^7.0.0",
-    "antd": "^5.16.0",
+    "@mui/x-date-pickers": "^7.1.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
